{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 256,
  "lineage": "af8c2c82-46ef-d64a-fddd-c6268f645932",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d7dcc9a4a391c9f",
            "domain": "vpc",
            "id": "eipalloc-04d7dcc9a4a391c9f",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-180-110-191.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.180.110.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraformEnvironment-elastic-ip"
            },
            "tags_all": {
              "Name": "terraformEnvironment-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:internet-gateway/igw-0e06ff83b8d6dad58",
            "id": "igw-0e06ff83b8d6dad58",
            "owner_id": "844726945283",
            "tags": {
              "Name": "MyTerraform_internet_gateway"
            },
            "tags_all": {
              "Name": "MyTerraform_internet_gateway"
            },
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:loadbalancer/app/terraformEnvironment-alb/ec834e975340bcfe",
            "arn_suffix": "app/terraformEnvironment-alb/ec834e975340bcfe",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraformEnvironment-alb-336367230.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:loadbalancer/app/terraformEnvironment-alb/ec834e975340bcfe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraformEnvironment-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04924f9e5e38d1e9d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-081ea36f6d01ac622"
              },
              {
                "subnet_id": "subnet-091b51e8cd1e44e73"
              }
            ],
            "subnets": [
              "subnet-081ea36f6d01ac622",
              "subnet-091b51e8cd1e44e73"
            ],
            "vpc_id": "vpc-03e346868e17a1d11",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:listener/app/terraformEnvironment-alb/ec834e975340bcfe/5f1059d81cf3e955",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:targetgroup/terraformEnvironment-tgrp/09d44fca32e9911d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:listener/app/terraformEnvironment-alb/ec834e975340bcfe/5f1059d81cf3e955",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:loadbalancer/app/terraformEnvironment-alb/ec834e975340bcfe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "terraformEnvironment-alb-listenter"
            },
            "tags_all": {
              "Name": "terraformEnvironment-alb-listenter"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:targetgroup/terraformEnvironment-tgrp/09d44fca32e9911d",
            "arn_suffix": "targetgroup/terraformEnvironment-tgrp/09d44fca32e9911d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:844726945283:targetgroup/terraformEnvironment-tgrp/09d44fca32e9911d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraformEnvironment-tgrp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d7dcc9a4a391c9f",
            "association_id": "eipassoc-0769a7fafae1a92f9",
            "connectivity_type": "public",
            "id": "nat-0273c0dd93b1ec465",
            "network_interface_id": "eni-053c9c84be2522b65",
            "private_ip": "10.10.0.163",
            "public_ip": "57.180.110.191",
            "subnet_id": "subnet-091b51e8cd1e44e73",
            "tags": {
              "Name": "MyTerraform_internet_gateway"
            },
            "tags_all": {
              "Name": "MyTerraform_internet_gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:route-table/rtb-0af31283e521cb4ea",
            "id": "rtb-0af31283e521cb4ea",
            "owner_id": "844726945283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0273c0dd93b1ec465",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraformEnvironment-private-route-table"
            },
            "tags_all": {
              "Name": "terraformEnvironment-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:route-table/rtb-02103d2331a5d766e",
            "id": "rtb-02103d2331a5d766e",
            "owner_id": "844726945283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e06ff83b8d6dad58",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraformEnvironment-public-route-table"
            },
            "tags_all": {
              "Name": "terraformEnvironment-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cba121d1086ba646",
            "route_table_id": "rtb-0af31283e521cb4ea",
            "subnet_id": "subnet-0a6360d16592ab4cd"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aa71f098bf741a9",
            "route_table_id": "rtb-0af31283e521cb4ea",
            "subnet_id": "subnet-08e8a7b0714600864"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b5a11a947c22913",
            "route_table_id": "rtb-02103d2331a5d766e",
            "subnet_id": "subnet-091b51e8cd1e44e73"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e94bde29fe35936a",
            "route_table_id": "rtb-02103d2331a5d766e",
            "subnet_id": "subnet-081ea36f6d01ac622"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:security-group/sg-04924f9e5e38d1e9d",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04924f9e5e38d1e9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraformEnvironment-alb-security-group",
            "name_prefix": "",
            "owner_id": "844726945283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraformEnvironment-alb-security-group"
            },
            "tags_all": {
              "Name": "terraformEnvironment-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:security-group/sg-056dffa4b25b6a239",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056dffa4b25b6a239",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04924f9e5e38d1e9d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraformEnvironment-asg-security-group",
            "name_prefix": "",
            "owner_id": "844726945283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraformEnvironment-asg-security-group"
            },
            "tags_all": {
              "Name": "terraformEnvironment-asg-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:subnet/subnet-0a6360d16592ab4cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6360d16592ab4cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844726945283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-private-subnet-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "terraformEnvironment-private-subnet-ap-northeast-1a"
            },
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:subnet/subnet-08e8a7b0714600864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e8a7b0714600864",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844726945283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-private-subnet-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "terraformEnvironment-private-subnet-ap-northeast-1c"
            },
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:subnet/subnet-091b51e8cd1e44e73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091b51e8cd1e44e73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844726945283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-public-subnet-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "terraformEnvironment-public-subnet-ap-northeast-1a"
            },
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:subnet/subnet-081ea36f6d01ac622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081ea36f6d01ac622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844726945283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformEnvironment-public-subnet-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "terraformEnvironment-public-subnet-ap-northeast-1c"
            },
            "vpc_id": "vpc-03e346868e17a1d11"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:844726945283:vpc/vpc-03e346868e17a1d11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03f15a092d6ce6d2d",
            "default_route_table_id": "rtb-0ed5fc668431d25ce",
            "default_security_group_id": "sg-018b0b929b6d2c0f0",
            "dhcp_options_id": "dopt-073f41bce46dcca2b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e346868e17a1d11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed5fc668431d25ce",
            "owner_id": "844726945283",
            "tags": {
              "Name": "MyTerraformVPC"
            },
            "tags_all": {
              "Name": "MyTerraformVPC"
            }
          }
        }
      ]
    }
  ]
}